@@ -64,5 +64,7 @@ keepFEGroups = 0
 # cat=basic/enable; type=boolean; label=Frontend CAS authentication : If checked, enable the Single Sign On feature with CAS server.
 enableFECASAuthentication = 0
 
+# cat=basic/enable; type=boolean; label=CAS User fetching: If checked, fetch only user informations when the current session is empty else alwayse fetch user informations.
+enableFetchUserIfNoSession = 0
 # cat=basic/enable; type=boolean; label=Delete cookie domain : If checked,Clean all cookie domain on CAS logout.
 DeleteCookieLogout = 0
